--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@sentry/react": "^9.0.0",
     "@sentry/vite-plugin": "^3.1.2",
+    "@supabase/supabase-js": "^2.49.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
